Replace button with link for 'Contacto' action

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <div class="actions" aria-hidden="true">
       <!-- ejemplo de acción en la barra (opcional) -->
-      <button class="small-btn" type="button">Contacto</button>
+     <a class="small-btn" href="https://voxpop.com.mx/" target="_blank" rel="noopener">Contacto</a>
     </div>
   </header>
 
