Hide brand text in header

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="brand" aria-hidden="false">
       <!-- Reemplaza logo.png por la ruta real de tu logo. Si quieres un SVG en blanco, úsalo aquí -->
       <img id="brandLogo" src="logo-blanco.png" alt="VOXPOP logo" />
-      <div class="brand-text">VOXPOP</div>
+      <div class="brand-text" style="display:none;">VOXPOP</div>
     </div>
 
     <div class="spacer" aria-hidden="true"></div>
